--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,15 +4,30 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: "Roboto", sans-serif;
+}
+
 .portada {
   width: 100%;
   height: 100vh;
-  /* background-image: linear-gradient(rgba(12, 3, 51, 0.3), rgba(12, 3, 51, 0.3)); */
+  top: 0;
+  left: 0;
   position: relative;
   padding: 0 5%;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+}
+
+.portada ul {
+  display: flex;
+  list-style: none;
+}
+
+.portada nav ul li a:hover {
+  color: crimson;
 }
 
 nav {
@@ -39,7 +54,16 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   color: #fff;
-  font-size: 17px;
+  font-size: 19px;
+}
+
+.portada nav ul li a {
+  text-align: none;
+  color: #fff;
+  margin: 0 15px;
+  padding: 3px;
+  transition: 0.5s;
+  text-decoration: none;
 }
 
 .contenido h1 {
@@ -57,6 +81,11 @@ nav ul li a {
   padding: 14px 70px;
   border-radius: 50px;
   margin-top: 20px;
+}
+
+.contenido h1:hover {
+  -webkit-text-stroke: 2px #fff;
+  color: transparent;
 }
 
 .atras_v {
