--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,7 +27,8 @@ html {
 }
 
 .portada nav ul li a:hover {
-  color: crimson;
+  color: #fff;
+  background: crimson;
 }
 
 nav {
@@ -52,9 +53,14 @@ nav ul li {
 }
 
 nav ul li a {
-  text-decoration: none;
-  color: #fff;
+  background: #000;
+  box-shadow: 5px 0 15px rgba(0, 0, 0, 0.3);
+  font-family: "Roboto", sans-serif;
   font-size: 19px;
+  color: #fff;
+  text-decoration: none;
+  border: thin solid #000;
+  border-radius: 5px;
 }
 
 .portada nav ul li a {
