finalizacion de pagina de noticias

--- a/CSS/descripcion.css
+++ b/CSS/descripcion.css
@@ -34,7 +34,7 @@ header a {
   font-size: 36px;
   color: #fff;
   text-decoration: none;
-  border: thin solid #000;
+  border: thin solid #fff;
   border-radius: 20px;
 }
 
