--- a/CSS/style.css
+++ b/CSS/style.css
@@ -59,7 +59,7 @@ nav ul li a {
   font-size: 19px;
   color: #fff;
   text-decoration: none;
-  border: thin solid #000;
+  border: thin solid #fff;
   border-radius: 5px;
 }
 
